// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableDefinitions utils - createComplianceLink should return valid compliance link 1`] = `"testCreateComplianceLink1"`;

exports[`tableDefinitions utils - createComplianceLink should return valid compliance link 2`] = `
<Link
  to="undefined/all/testCreateComplianceLink2"
>
  testCreateComplianceLink2
   (Deprecated)
</Link>
`;

exports[`tableDefinitions utils - createComplianceLink should return valid compliance link 3`] = `
<Link
  to="undefined/all/testNamespace3/testCreateComplianceLink3"
>
  testCreateComplianceLink3
</Link>
`;

exports[`tableDefinitions utils - formatAnnotationString should get "-"  1`] = `"-"`;

exports[`tableDefinitions utils - formatAnnotationString should get "-"  2`] = `"-"`;

exports[`tableDefinitions utils - formatAnnotationString should get list of annotations back with proper whitespace 1`] = `"test1 test2, test3, test4 test5"`;

exports[`tableDefinitions utils - getCategories should return categories status 1`] = `"11, 12, 13, 14, 15"`;

exports[`tableDefinitions utils - getControls should return control status 1`] = `"1, 2, 3, 4, 5"`;

exports[`tableDefinitions utils - getDecisionCount should return the total should return decisions status 1`] = `3`;

exports[`tableDefinitions utils - getDecisionCount should return the total tableDefinitions utils - getDecisionCount should return 0 1`] = `0`;

exports[`tableDefinitions utils - getPolicyCompliantStatus should return disabled policy compliant status 1`] = `
<div
  className="disabledStatus"
>
  --
</div>
`;

exports[`tableDefinitions utils - getPolicyCompliantStatus should return policy compliant status with cluster violation 1`] = `
<div
  className="violationCell"
>
  <RedExclamationCircleIcon
    tooltip="Policy is non-compliant."
  />
  1/3
</div>
`;

exports[`tableDefinitions utils - getPolicyCompliantStatus should return policy compliant status with unavailable cluster compliant 1`] = `
<div
  className="violationCell"
>
  <YellowExclamationTriangleIcon
    tooltip="Policy status is unavailable for some clusters."
  />
  -
</div>
`;

exports[`tableDefinitions utils - getPolicyCompliantStatus should return policy compliant status with unknown cluster violation 1`] = `
<div
  className="violationCell"
>
  <RedExclamationCircleIcon
    tooltip="Policy is non-compliant."
  />
  <YellowExclamationTriangleIcon
    tooltip="Policy status is unavailable for some clusters."
  />
  1/3
</div>
`;

exports[`tableDefinitions utils - getPolicyCompliantStatus should return policy compliant status without cluster violation 1`] = `
<div
  className="violationCell"
>
  <GreenCheckCircleIcon
    tooltip="Policy is compliant."
  />
  0/3
</div>
`;

exports[`tableDefinitions utils - getStandards should return standards status 1`] = `"6, 7, 8, 9, 10"`;
